# camera2imgvid

./: CMakeLists.txt  README.md  start.sh
include/: time_camera.h  xml_para.h
src/: CMakeLists.txt  main.cpp  time_camera.cpp  xml_para.cpp
